auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4824d59d",
+   "id": "e84e5deb",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b461206a",
+   "id": "cf3f029f",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98bd0278",
+   "id": "f69d4a65",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2abbaf",
+   "id": "56cdebe0",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e81d198",
+   "id": "d93a8d5d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee1d050",
+   "id": "281d5a92",
    "metadata": {
     "hide-output": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a4736f",
+   "id": "0f35b068",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4db2aa0c",
+   "id": "60d52d25",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45895802",
+   "id": "35bb5d54",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afcc2114",
+   "id": "c99cb8bc",
    "metadata": {
     "hide-output": false
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed3a47a",
+   "id": "219ddef1",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55f59097",
+   "id": "5dc4372a",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d227a4a",
+   "id": "ab0cf80e",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bee9b0c",
+   "id": "3db2a408",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f3cbf0b",
+   "id": "de769474",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c49b15",
+   "id": "ec0c34ee",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21896d3",
+   "id": "f08214db",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff70855",
+   "id": "e5eb07b8",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21278638",
+   "id": "a8aee374",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d6c5d75",
+   "id": "77c49f45",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0eff40",
+   "id": "c17a47b3",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5b1208",
+   "id": "5d78379b",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c8b2a57",
+   "id": "2887f3a0",
    "metadata": {
     "hide-output": false
    },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca8484c2",
+   "id": "47064793",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3397ebc9",
+   "id": "fe605ece",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70af93ac",
+   "id": "06ce7f3d",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e99066a",
+   "id": "693957b1",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb6d5eb8",
+   "id": "26109d53",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b92b276",
+   "id": "1b7e564e",
    "metadata": {
     "hide-output": false
    },
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f909d6d",
+   "id": "d12ac43e",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b67da8",
+   "id": "ce232494",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the\n",
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b707be03",
+   "id": "db063887",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6060e510",
+   "id": "dbe60798",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27f9041",
+   "id": "edad78d5",
    "metadata": {
     "hide-output": false
    },
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc68f67e",
+   "id": "96e0caa9",
    "metadata": {},
    "source": [
     "We can now write a function that will use an instance of `ArellanoEconomy` and\n",
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e1f546e",
+   "id": "3c8fc5dd",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af168f5",
+   "id": "e2a5c319",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0c5684",
+   "id": "16dfadb8",
    "metadata": {
     "hide-output": false
    },
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f73f8b",
+   "id": "9653ff74",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41130d17",
+   "id": "0abc5fc6",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "067032cb",
+   "id": "c3392f19",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab9f8d2",
+   "id": "40dd792e",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9140c41a",
+   "id": "284419d3",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c80121",
+   "id": "20967a90",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7cdd1cd",
+   "id": "9a9d8c6e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84dd04ee",
+   "id": "64d3735c",
    "metadata": {},
    "source": [
     "## Exercise 17.1\n",
@@ -1072,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13378703",
+   "id": "da1a941b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 17.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab41cbf",
+   "id": "67568035",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c75e4c",
+   "id": "fbcc13b9",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of [[Arellano, 2008](https://jax.quantecon.org/zreferences.html#id255)]"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb54970",
+   "id": "417f5afd",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52d017e",
+   "id": "e0f6b43e",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d300c2",
+   "id": "14ba40c6",
    "metadata": {
     "hide-output": false
    },
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda2c8b4",
+   "id": "15578ad6",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1178,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acc7f8cb",
+   "id": "c30461ac",
    "metadata": {
     "hide-output": false
    },
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccf2a0d",
+   "id": "e172f9c8",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b56f73d",
+   "id": "9a3c4e35",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5f222d5",
+   "id": "8ba1ef9a",
    "metadata": {
     "hide-output": false
    },
@@ -1278,7 +1278,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567831.952082,
+  "date": 1764821802.1816196,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
