--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "63d14985",
+   "id": "119a827c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b77b4db",
+   "id": "b34e32f7",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce36f817",
+   "id": "4e9564e7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5e370b9",
+   "id": "10125434",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3848d8e9",
+   "id": "359ca4e4",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423f8e6e",
+   "id": "1093bd63",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2c6f084",
+   "id": "8645066d",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47fe3416",
+   "id": "a17b6173",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "185ab17f",
+   "id": "e64b4bbe",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fcbf498",
+   "id": "146de37b",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d660e27a",
+   "id": "7a095f1d",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ffaa168",
+   "id": "707bf25d",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fa1865b",
+   "id": "f15bd229",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3797cc40",
+   "id": "681e3fa2",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc209f75",
+   "id": "112feb0a",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd6530f",
+   "id": "5485acd6",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f8c8498",
+   "id": "849c2f9a",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a9f778",
+   "id": "17485860",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e4bb77",
+   "id": "7b6f6945",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8df4fe45",
+   "id": "09cdb648",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a0710d",
+   "id": "b5238158",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08d54c6c",
+   "id": "039e10cb",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60696206",
+   "id": "dd6750c5",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c18b96f",
+   "id": "113b7186",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bba8c8",
+   "id": "765657aa",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac3f0769",
+   "id": "b9e35a1d",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfa713f6",
+   "id": "6824a553",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cec35918",
+   "id": "c1df08fd",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e4dfcc4",
+   "id": "7f0edb69",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba06aab8",
+   "id": "800fe4d8",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9540054a",
+   "id": "c03f5d51",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0eab8a0",
+   "id": "1c5000dd",
    "metadata": {
     "hide-output": false
    },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586ebea7",
+   "id": "b6e8cfd5",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6427e296",
+   "id": "38ab568b",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07417bf",
+   "id": "4e2edb6e",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16694096",
+   "id": "074a0ced",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f95bdb6",
+   "id": "0230f036",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168991d3",
+   "id": "72bc4d4d",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ccc917",
+   "id": "add5d6cf",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "723c645c",
+   "id": "bb47d69d",
    "metadata": {},
    "source": [
     "We run the code again to get rid of compile time."
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3143c178",
+   "id": "229b7292",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e53d6d69",
+   "id": "ba7bc274",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "262402a2",
+   "id": "93257aef",
    "metadata": {},
    "source": [
     "### Exercise 5.1\n",
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029b8058",
+   "id": "d7ad606f",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 5.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "085d7768",
+   "id": "cb7ed56c",
    "metadata": {
     "hide-output": false
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9420da4",
+   "id": "d52fb2f0",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55352ba",
+   "id": "ba0cc35e",
    "metadata": {
     "hide-output": false
    },
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3849449e",
+   "id": "707d4403",
    "metadata": {},
    "source": [
     "We run the code again to eliminate the compile time."
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f635db68",
+   "id": "0efb54ac",
    "metadata": {
     "hide-output": false
    },
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9433fceb",
+   "id": "869f7bd2",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.1193519,
+  "date": 1764821802.359885,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
