--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60acee58",
+   "id": "531b11b0",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931d4b45",
+   "id": "f0c909b5",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89735d09",
+   "id": "017c095c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "765d458e",
+   "id": "ed0441b6",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6388f69",
+   "id": "73f1fcd8",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accb79df",
+   "id": "41c0f4c4",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afdc333e",
+   "id": "40f25666",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3261ac6e",
+   "id": "afb4d073",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83eacdf5",
+   "id": "a11b6874",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69aeb934",
+   "id": "463f7335",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aa5682f",
+   "id": "717a8a1c",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cad00ab",
+   "id": "1f917104",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee727364",
+   "id": "c277b76c",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96c0bbd5",
+   "id": "322253fc",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d9026c4",
+   "id": "82cf7ba3",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4154635",
+   "id": "938e1828",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92297439",
+   "id": "ae72ccdd",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f6112ce",
+   "id": "91100fef",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02bf472c",
+   "id": "ea21b459",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575033cc",
+   "id": "e3f0be61",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a70dd5c",
+   "id": "f42b94e1",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf993a6",
+   "id": "e7d10045",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71825b6b",
+   "id": "a1f92589",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a3323b",
+   "id": "297f1287",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b260f5bf",
+   "id": "9c457960",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955520c4",
+   "id": "5090b5bf",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec2a3481",
+   "id": "dbbcf77a",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f91829cc",
+   "id": "9a66daeb",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3367ea09",
+   "id": "d6c48473",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6c3d7c",
+   "id": "b6b09150",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2718306",
+   "id": "42e4a5c9",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebdfe35a",
+   "id": "d4968d71",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "706f704a",
+   "id": "f714712e",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4226ab2",
+   "id": "083b07bb",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee75fa8",
+   "id": "b11b9be4",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34f456fc",
+   "id": "555b8cbd",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35214d53",
+   "id": "a54371e3",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.138245,
+  "date": 1764821802.3799958,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
