--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ecdf382a",
+   "id": "b8e9aa77",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd49c58",
+   "id": "df1facd1",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb669e6",
+   "id": "87e06400",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ecdaf44",
+   "id": "07bbff1b",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5ace0c6",
+   "id": "de1e4dfa",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b18798f",
+   "id": "99cc0c2b",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa51d98",
+   "id": "090fc17f",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d15c5b0",
+   "id": "063c62ef",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fee9aa8",
+   "id": "198b6e38",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd85a65",
+   "id": "87c748a0",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a56def3f",
+   "id": "349951d6",
    "metadata": {
     "hide-output": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84b1afe",
+   "id": "73be2f9a",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4415a9e1",
+   "id": "774c2133",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a17045",
+   "id": "4d0f0ff8",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "140e15c8",
+   "id": "79984944",
    "metadata": {
     "hide-output": false
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2010233f",
+   "id": "e441b400",
    "metadata": {
     "hide-output": false
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "705b67ca",
+   "id": "83984147",
    "metadata": {
     "hide-output": false
    },
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fcf95e8",
+   "id": "d3378cb9",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "196df399",
+   "id": "076df952",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e98ef52",
+   "id": "eeff07e5",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dc61615",
+   "id": "edf2a4d2",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4264715",
+   "id": "b2f95ca9",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04da09fb",
+   "id": "5a73207e",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26eaa2c",
+   "id": "c8ac0b38",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e9fb8c3",
+   "id": "3e92f51a",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bab98065",
+   "id": "557b698c",
    "metadata": {
     "hide-output": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ea8b22",
+   "id": "204b4d97",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91075929",
+   "id": "672affb9",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88838606",
+   "id": "c9940fa2",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47da6566",
+   "id": "3e7c85fe",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1686229",
+   "id": "8d46a0cf",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eed930f",
+   "id": "656d7a2e",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32d52428",
+   "id": "7024dd38",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc6445e",
+   "id": "4b279af2",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e1e9ec",
+   "id": "cc9a3912",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85119e89",
+   "id": "6e69807a",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bad0f345",
+   "id": "7eb58a5e",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ea6290",
+   "id": "8049142c",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aac84c84",
+   "id": "e94b65b1",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b9e33f6",
+   "id": "43d1e41b",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a8fdfa",
+   "id": "4206a748",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85c73f1c",
+   "id": "192aef04",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2a1488",
+   "id": "006270cf",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf4c514",
+   "id": "5d28d11a",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -707,7 +707,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.2595546,
+  "date": 1764821802.509646,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
