--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dfca4864",
+   "id": "3bb8b628",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c502b3c6",
+   "id": "5a468848",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6e4c18",
+   "id": "7668db0c",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d66ece",
+   "id": "8223acbe",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e74804",
+   "id": "85b6a86b",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92c69715",
+   "id": "523f3ee0",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77775973",
+   "id": "e175dbb4",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d79b7fb",
+   "id": "103232ef",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d56935",
+   "id": "0c0df0de",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b9cca5",
+   "id": "756d62a2",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0fe08a7",
+   "id": "4edd5ba8",
    "metadata": {
     "hide-output": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586ea719",
+   "id": "b7ecda97",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19361b6a",
+   "id": "b19111f9",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d51ab78",
+   "id": "f87030e3",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd264ec",
+   "id": "119ae197",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e314f4",
+   "id": "927b82cc",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f8532de",
+   "id": "c9e8bd78",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a608e8",
+   "id": "4675c847",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a89f58cf",
+   "id": "7dbbceee",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5833a7",
+   "id": "5b42d3c9",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbba62bb",
+   "id": "b5f2f148",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "182dc236",
+   "id": "a5094196",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38b1c39",
+   "id": "db5fabc2",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3e755f",
+   "id": "7239aeb0",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38e50cc",
+   "id": "6454ea7b",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cab71656",
+   "id": "df2450ad",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f2e23b",
+   "id": "25986f0f",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72fbe6cc",
+   "id": "2fdda9c2",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e104c574",
+   "id": "1a3d80e9",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55de170e",
+   "id": "39c04198",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b2fa20b",
+   "id": "13ed6a64",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "770de547",
+   "id": "2ecfa493",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b7912c",
+   "id": "40b898ff",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6f50c50",
+   "id": "930925b6",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be3ccd89",
+   "id": "b2e846c2",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017e2d3e",
+   "id": "65a1cf5a",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f926a02",
+   "id": "f6ec109a",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc915ac4",
+   "id": "f55f009f",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db7f4442",
+   "id": "3eb38c81",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed35c30e",
+   "id": "6a1c174d",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dc00b34",
+   "id": "1b1acd0b",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ac8221",
+   "id": "f8629b33",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5073c7f5",
+   "id": "1c74282c",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b50ca6",
+   "id": "c7efa722",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73e91af",
+   "id": "8a9d1073",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3411e17",
+   "id": "e6eda2c0",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24387ea4",
+   "id": "1654afc8",
    "metadata": {
     "hide-output": false
    },
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d96f13d1",
+   "id": "7e8e40e9",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4dd786",
+   "id": "8f4f5a49",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f5e3320",
+   "id": "44c6e4a1",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a15a45c6",
+   "id": "92af9bdf",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e24ba449",
+   "id": "f7e12dfa",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a068456",
+   "id": "340ac0ed",
    "metadata": {
     "hide-output": false
    },
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3daee428",
+   "id": "570de399",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5993d4e",
+   "id": "0e80c1d4",
    "metadata": {
     "hide-output": false
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa6bc67",
+   "id": "6ccb8c7e",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aaef9f0f",
+   "id": "06f75b88",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a41af92",
+   "id": "7df4fe78",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea56df2f",
+   "id": "a8815565",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83371bbc",
+   "id": "6f41f886",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d58925be",
+   "id": "255657c5",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc953990",
+   "id": "a1a86bb2",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2407699",
+   "id": "62e23db4",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a078ed3",
+   "id": "d49bf04d",
    "metadata": {
     "hide-output": false
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d97d435",
+   "id": "703e9eeb",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be56b82a",
+   "id": "0ae56547",
    "metadata": {
     "hide-output": false
    },
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7f15846",
+   "id": "e1901e88",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb628b4b",
+   "id": "bfc91f0c",
    "metadata": {
     "hide-output": false
    },
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a117417",
+   "id": "15e2051c",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0f9df6",
+   "id": "5d5038ad",
    "metadata": {
     "hide-output": false
    },
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7882c51e",
+   "id": "3b5395ab",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9809b35",
+   "id": "efae6dd1",
    "metadata": {
     "hide-output": false
    },
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d2c152",
+   "id": "c70d3daa",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ee19983",
+   "id": "f2d7474b",
    "metadata": {
     "hide-output": false
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f348c1",
+   "id": "53e26254",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b4a7ea7",
+   "id": "862f84e5",
    "metadata": {
     "hide-output": false
    },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a1bd46",
+   "id": "16684371",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb8101e",
+   "id": "602a081d",
    "metadata": {
     "hide-output": false
    },
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02c012c2",
+   "id": "24774ccb",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d4699b",
+   "id": "55cccfe2",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b78a3e3",
+   "id": "925c5170",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb50487e",
+   "id": "d5b750a9",
    "metadata": {
     "hide-output": false
    },
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45765392",
+   "id": "7253846b",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1664,7 +1664,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.400068,
+  "date": 1764821802.6574974,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
