--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37f6b14f",
+   "id": "8b67b63d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bac90fd9",
+   "id": "e0f52131",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5061f27c",
+   "id": "ee64bf62",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0471d365",
+   "id": "587e641a",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3214c4ad",
+   "id": "c444b038",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879aaab1",
+   "id": "39cae0d5",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eefc9b3b",
+   "id": "31d7a3fe",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351b2359",
+   "id": "eda4b754",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0deb2353",
+   "id": "38ba539c",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb57f7b",
+   "id": "b9054874",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf9bd48",
+   "id": "7df5b047",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e386c6d",
+   "id": "38c6ced7",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07969719",
+   "id": "57178db7",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9b14015",
+   "id": "98d9a4fd",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c14f350",
+   "id": "27bec549",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0975eda1",
+   "id": "afcf5188",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "819fad08",
+   "id": "76c877eb",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d564bf",
+   "id": "0e0b59ac",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a8122ee",
+   "id": "dcac7c54",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfffe69d",
+   "id": "a3dcb1e1",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0131c105",
+   "id": "1be6d2e5",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d71c99fb",
+   "id": "d6027bcb",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f73b5937",
+   "id": "d0e0223b",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf57f06d",
+   "id": "6f898751",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12ad8fe",
+   "id": "e7c4dee4",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435f4301",
+   "id": "825f19d7",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a78a8bd",
+   "id": "00ddeae1",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb78cd3",
+   "id": "3fe5701a",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1322cd78",
+   "id": "a6e64228",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0fcc03",
+   "id": "084f3e88",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e6b1d3",
+   "id": "3bee68ef",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471b1f2f",
+   "id": "b1e1a5da",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153ac338",
+   "id": "4026de85",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6296cf3d",
+   "id": "a2d8b14b",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "796a21f8",
+   "id": "66596e93",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb784c60",
+   "id": "9df33710",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34820d4b",
+   "id": "25574ec9",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c9cbb7",
+   "id": "f5f5d971",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32419ade",
+   "id": "03fff9e2",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71a8e0c",
+   "id": "a4993ebd",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37e35c3b",
+   "id": "d7a0bed9",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdecdc8a",
+   "id": "d114b6dc",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25da01fe",
+   "id": "9c02ca06",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18086c49",
+   "id": "d666a444",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2ed1780",
+   "id": "c21619e9",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8539024f",
+   "id": "9d948761",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0246b82",
+   "id": "48dd9fe6",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4610dd48",
+   "id": "01584cd6",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb16de4",
+   "id": "7d6525a3",
    "metadata": {
     "hide-output": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490f127e",
+   "id": "c2dce008",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc8a18a",
+   "id": "6a90bd2e",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fca5d702",
+   "id": "c332650f",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49a5af1",
+   "id": "f25d2e39",
    "metadata": {
     "hide-output": false
    },
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac214c39",
+   "id": "21151c02",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67130a83",
+   "id": "c2758856",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c076d9",
+   "id": "eb23fa03",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390ad8dd",
+   "id": "56897ed4",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55aa990",
+   "id": "54ff93d0",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c951672",
+   "id": "89f86c57",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d8e35f",
+   "id": "62893cfa",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21ada16",
+   "id": "cee92700",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183ca5ec",
+   "id": "f4d0ea40",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a4ad17b",
+   "id": "53776e3d",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86302470",
+   "id": "6de5981c",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbf4de95",
+   "id": "c7f33846",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf23c9e6",
+   "id": "dbf2b35f",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b20707d",
+   "id": "dd61a019",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f848218",
+   "id": "7a915fc6",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70566ae1",
+   "id": "0d70ac60",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7199c84",
+   "id": "910e3be9",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1ae897a",
+   "id": "d4b1772c",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84fcedd2",
+   "id": "666d491e",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef28a598",
+   "id": "c91a015f",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32605bb8",
+   "id": "31850178",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "485c23e6",
+   "id": "87698f4e",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec0c7d72",
+   "id": "10073162",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8051d82c",
+   "id": "056539ff",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd7ea1b9",
+   "id": "ddff30a5",
    "metadata": {
     "hide-output": false
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fedb19e5",
+   "id": "5696331b",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1513,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.593823,
+  "date": 1764821802.8604395,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
