--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ea92f3a8",
+   "id": "0480a04f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3ff7e0",
+   "id": "6260a1c6",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1b8da4",
+   "id": "45f47baa",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa17ebd5",
+   "id": "adf3e64a",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f55902ba",
+   "id": "cdcd2e81",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -91,7 +91,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.6404645,
+  "date": 1764821802.908678,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
