--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "449a4595",
+   "id": "b5e96440",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "521b372f",
+   "id": "cc6ada26",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e70dea7f",
+   "id": "e7ffe2b1",
    "metadata": {},
    "source": [
     "# References\n",
@@ -39,7 +39,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.680184,
+  "date": 1764821802.9499135,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
