--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f9af875d",
+   "id": "885e85b5",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d62d474",
+   "id": "0e6f8e75",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82696672",
+   "id": "152e3366",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba38fc5e",
+   "id": "9d7f1bf3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709a8cf0",
+   "id": "52747fb9",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a31f64f9",
+   "id": "30610be6",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12a33db7",
+   "id": "7b3a8980",
    "metadata": {
     "hide-output": false
    },
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5efa1637",
+   "id": "f868b98b",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c34dba5",
+   "id": "6a4b246e",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8be5176",
+   "id": "ae533ecb",
    "metadata": {
     "hide-output": false
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e880a75d",
+   "id": "3491b223",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0819a8f4",
+   "id": "819d09a0",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ae6ebb",
+   "id": "792b8833",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27163bfc",
+   "id": "6e2ce7d1",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d72d6fb",
+   "id": "98db23fd",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02355656",
+   "id": "ad1f8556",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3af0138",
+   "id": "7c9071ad",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "687cc297",
+   "id": "cf2b6c9b",
    "metadata": {
     "hide-output": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12742761",
+   "id": "cec78946",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752ac149",
+   "id": "d91b53bd",
    "metadata": {
     "hide-output": false
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eddac50",
+   "id": "22b6ba93",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b41a6c63",
+   "id": "64b7d719",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30c96ea1",
+   "id": "367d9101",
    "metadata": {
     "hide-output": false
    },
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44390ad8",
+   "id": "9e1aab38",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4d8681",
+   "id": "314f0a88",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b2ba32b",
+   "id": "bd263647",
    "metadata": {
     "hide-output": false
    },
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6574b76a",
+   "id": "41614502",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae7fbe4",
+   "id": "5eb157fd",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2725a193",
+   "id": "0a9aa8bc",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f59d862c",
+   "id": "e3ba1740",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc7dd85",
+   "id": "6de0c102",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e417647b",
+   "id": "2f2dc2a6",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "924cd5e4",
+   "id": "55b4d27d",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5fc3b68",
+   "id": "54e709c0",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3db31572",
+   "id": "c278bc87",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4a3fae",
+   "id": "a32d58b4",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ece43aa1",
+   "id": "8c312937",
    "metadata": {
     "hide-output": false
    },
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d71d22c6",
+   "id": "6058fc30",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20cb732d",
+   "id": "d1a80a5a",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6730773",
+   "id": "abf35dcf",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2471d299",
+   "id": "12f18a50",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0240c477",
+   "id": "76ea3524",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02bc0a25",
+   "id": "4d193018",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94c74832",
+   "id": "ac6d57e4",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd946ed1",
+   "id": "f1a02ee1",
    "metadata": {
     "hide-output": false
    },
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32620612",
+   "id": "729dea32",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b13476ce",
+   "id": "4b6236c2",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b24b314e",
+   "id": "f30e877b",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f847ee0b",
+   "id": "7e8904b4",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cee4c8",
+   "id": "594d8148",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "086e8303",
+   "id": "03049f33",
    "metadata": {
     "hide-output": false
    },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87cd420f",
+   "id": "ba9dd83c",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a0b6502",
+   "id": "22467504",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6405f306",
+   "id": "ef7cb7a1",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e69226a",
+   "id": "3e60ef46",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c08b0b",
+   "id": "31cf3727",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ec5fde",
+   "id": "fe5f72e3",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7746791e",
+   "id": "4ef01ef4",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6adce3fb",
+   "id": "968f5101",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e35bf2b",
+   "id": "e8704082",
    "metadata": {
     "hide-output": false
    },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c912363",
+   "id": "104db87e",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f44a4d1",
+   "id": "e2923120",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a642713",
+   "id": "ac97d573",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "877e060c",
+   "id": "a6a90f56",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afaeab4f",
+   "id": "29301b12",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567831.97996,
+  "date": 1764821802.2113245,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
