--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d61a1144",
+   "id": "d2397d37",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f9e7107",
+   "id": "d1687175",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d2fb12e",
+   "id": "e3e348e1",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcbbe5b3",
+   "id": "5a73bc80",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efbe8ed2",
+   "id": "433a5f67",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ef1c7c",
+   "id": "c02480e7",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a02ad9",
+   "id": "44b702a2",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c425cdc2",
+   "id": "aa7940c1",
    "metadata": {},
    "source": [
     "## The Model"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f964e0a2",
+   "id": "e353b8c1",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdcf8c5",
+   "id": "d4f9a8bc",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -189,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-a8724bdc-64e0-4814-990e-065b2d213242'></a>\n",
+    "<a id='equation-6c3cd727-07df-470b-819d-9ae8aff4ba8b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -202,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-fa4842ae-2712-4e14-9985-87c29cf7c3bd'></a>\n",
+    "<a id='equation-da472727-67d4-4020-97e9-4f4383591223'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6c2eeb",
+   "id": "76d2c5ac",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -256,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-04eb9e1a-d716-4b06-9294-d1810c794c90'></a>\n",
+    "<a id='equation-4a0f58c0-0f20-482f-8e29-2dbebd418baa'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -266,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-686c1da8-b666-42c8-a9d0-d7bb520fa897'></a>\n",
+    "<a id='equation-ab49aecf-c8a5-4db8-ad1c-a81d99984928'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -280,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-8bf3181a-b194-4731-9c5d-348f18609c6f'></a>\n",
+    "<a id='equation-e090b116-9846-4ec5-993a-8ee96785a083'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -290,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-7c0258a4-ba27-4722-b8a6-64c22fd7e24f'></a>\n",
+    "<a id='equation-c4ea8d84-39ae-4530-ac72-390996d405dd'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac886016",
+   "id": "132d0bc9",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -315,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-8cce57cf-3dab-4037-bbdd-d9691f044bc9'></a>\n",
+    "<a id='equation-8453014b-7ebd-4960-8185-7cd85bef833f'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -327,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-1bd1fad5-4329-42b3-ba3e-074ad2df65e9'></a>\n",
+    "<a id='equation-d982f54b-20a0-4409-8cb3-c910ca92a3d7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02289519",
+   "id": "7de85a1c",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a2586e",
+   "id": "4316d265",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd7bbee1",
+   "id": "cdb48ae2",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e286b2",
+   "id": "504677cd",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97cacdc8",
+   "id": "8b145604",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c99bb51",
+   "id": "2f407f8d",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5440debe",
+   "id": "864a6604",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecf687e3",
+   "id": "08ff47e8",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eb9cb9d",
+   "id": "3512a7a6",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdba25b8",
+   "id": "ba0aea66",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1034e38e",
+   "id": "df3a1b95",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "568a524c",
+   "id": "21120081",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37f683e5",
+   "id": "3f6989b6",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da164c33",
+   "id": "d945aff5",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c84892",
+   "id": "7420b5d1",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c798d05",
+   "id": "5eacac86",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ca0961",
+   "id": "8fc79f49",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ebe07da",
+   "id": "9b13c173",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7220979",
+   "id": "6440ed5f",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "585389f8",
+   "id": "74310799",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d106c61f",
+   "id": "5f6de0ac",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af8ac385",
+   "id": "25126702",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f851133a",
+   "id": "e16cc26c",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ffb700",
+   "id": "7448b7ce",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389854ae",
+   "id": "ea24ef08",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3506b3c",
+   "id": "9ba80524",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd37f176",
+   "id": "b5d8b9bc",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a228cc90",
+   "id": "8454d893",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "135811d4",
+   "id": "71728ad5",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee38f0f",
+   "id": "55dffad3",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a93c2d1c",
+   "id": "be99480b",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af1feda5",
+   "id": "bc4249c8",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af44819f",
+   "id": "301ee4c5",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251168eb",
+   "id": "9187530f",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d37a6ab",
+   "id": "93def7e7",
    "metadata": {
     "hide-output": false
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecdfd6e6",
+   "id": "a8508c78",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c051c25",
+   "id": "5e2e62a4",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a40dc6",
+   "id": "ff88aa05",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c3ad98",
+   "id": "e55006f8",
    "metadata": {
     "hide-output": false
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f406e587",
+   "id": "25ca7aa6",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654e8405",
+   "id": "8b1f2b1a",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a0183a",
+   "id": "b9ebe469",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2618b877",
+   "id": "0a6a80e5",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69dff2c",
+   "id": "fa5dda78",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "867458ea",
+   "id": "1d0f2721",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d24e93",
+   "id": "14f56da9",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd9f310b",
+   "id": "80eeb72f",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c0384a",
+   "id": "47d43f2a",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d20537",
+   "id": "8d293ea0",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c97e09a9",
+   "id": "9d0a4d89",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a501ca6a",
+   "id": "00cc889d",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d11f87a0",
+   "id": "2dafd641",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f40c0908",
+   "id": "0384de04",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb25a0f",
+   "id": "9dd0b486",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408a72b4",
+   "id": "6c98460f",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb37eae",
+   "id": "01dd3e28",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e58ce79",
+   "id": "3b5b13d0",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18269390",
+   "id": "cbf07375",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26550820",
+   "id": "3163881e",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a22890ee",
+   "id": "0159cada",
    "metadata": {
     "hide-output": false
    },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd426d09",
+   "id": "e8aa7371",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e335ada8",
+   "id": "a02cbaba",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90008cc9",
+   "id": "2be389bf",
    "metadata": {
     "hide-output": false
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6822ee1",
+   "id": "bb357932",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77f0c27",
+   "id": "95b189cd",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41dd3177",
+   "id": "de189af2",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bbba8a1",
+   "id": "141c610a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd6fb80b",
+   "id": "09eb320f",
    "metadata": {
     "hide-output": false
    },
@@ -1432,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1764567832.019508,
+  "date": 1764821802.2530868,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
